--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    <h3> Hello this is muaid</h3>
+    <h3> Hello this site is for Bojbara Project </h3>
 
     <script src="js.js"></script>
 </body>
